# ChangeLog for net-misc/bfgminer
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/bfgminer/ChangeLog,v 1.9 2012/06/03 15:32:32 blueness Exp $

*bfgminer-2.4.2 (03 Jun 2012)

  03 Jun 2012; Anthony G. Basile <blueness@gentoo.org> +bfgminer-2.4.2.ebuild:
  Version bump

  22 May 2012; Samuli Suominen <ssuominen@gentoo.org> bfgminer-2.3.4.ebuild,
  bfgminer-2.3.5.ebuild, bfgminer-2.3.6.ebuild, bfgminer-2.4.0.ebuild,
  bfgminer-2.4.1.ebuild:
  Use virtual/libusb instead of dev-libs/libusb.

*bfgminer-2.4.1 (15 May 2012)

  15 May 2012; Anthony G. Basile <blueness@gentoo.org> +bfgminer-2.4.1.ebuild:
  Version bump

*bfgminer-2.4.0 (05 May 2012)

  05 May 2012; Anthony G. Basile <blueness@gentoo.org> +bfgminer-2.4.0.ebuild:
  Version bump

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> bfgminer-2.3.4.ebuild,
  bfgminer-2.3.5.ebuild, bfgminer-2.3.6.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*bfgminer-2.3.6 (29 Apr 2012)

  29 Apr 2012; Anthony G. Basile <blueness@gentoo.org> +bfgminer-2.3.6.ebuild:
  Version bump

*bfgminer-2.3.5 (28 Apr 2012)

  28 Apr 2012; Anthony G. Basile <blueness@gentoo.org> +bfgminer-2.3.5.ebuild:
  Version bump

  27 Apr 2012; Anthony G. Basile <blueness@gentoo.org> bfgminer-2.3.4.ebuild:
  Fix dependency issue on virtual/opencl

*bfgminer-2.3.4 (27 Apr 2012)

  27 Apr 2012; Anthony G. Basile <blueness@gentoo.org> +bfgminer-2.3.4.ebuild,
  +files/Bugfix-Fix-building-without-OpenCL-support.patch, +metadata.xml:
  Initial commit from luke-jr's bitcoin overlay. Thanks!
