@@ -8,18 +8,18 @@ DIST bfgminer-2.3.6.tbz2 4651689 RMD160 7b3f8d56f7b9bc1fa19825a4c77abcbe307a74c3
 DIST bfgminer-2.4.0.tbz2 4652292 RMD160 059c2ec44a493d0dedf30748c0d06aaac8ee5f20 SHA1 cebb22e38833a8cbbd5b9362e329120337e2c927 SHA256 671451c3df528dd7656fbe2653b71c1b088391799bd3a5f52a193ad4debd025a
 DIST bfgminer-2.4.1.tbz2 4654229 RMD160 54cc68cd3ada8c6c9a793aa5616527402f526026 SHA1 6650301e7bb6e77174f8022646172eb3eaabff1d SHA256 7434c99033362651d56abb0315aeabb2c6a5544fa4241d82b2c64db4b9254cd4
 DIST bfgminer-2.4.2.tbz2 4809197 RMD160 c66a4b80e7afd310495945774960c78d907ca0b8 SHA1 69681b0abfade644b4f1822ad744c129a4a88641 SHA256 9af812771cac266882a83f1f6591d1005e9c0f46fe86af6b4ed0df469531d6e6
-EBUILD bfgminer-2.3.4.ebuild 2700 RMD160 b86664e09d912572ae4586d0e9bced3b730d5623 SHA1 50a94ac78e5624e0fcb4326ac3aadaab8c49ced4 SHA256 c56fcf734199e08ee4bc788f07073f2475ca3287184bf524eed81f7fee7f3f75
-EBUILD bfgminer-2.3.5.ebuild 2615 RMD160 fee419f8b92654dd72c37da593faf9c0afdbc101 SHA1 d29bb6a8548c3315a87fd9bf6ba9d00f88036e2b SHA256 610d466b4c455ab55a23cecf7753fdcc60ba31377a04f34ce89659553b8e6c99
-EBUILD bfgminer-2.3.6.ebuild 2615 RMD160 d4a6cb414db7e82e8d135f0aebb6b962bc190d8f SHA1 94b61cca23c29ee4f5c2199c70f2053ce4a7d5d3 SHA256 75f64dc7156e2fb36beb725d18fac3fe4c941f5e4ce1041325c69fbd09c3bcae
-EBUILD bfgminer-2.4.0.ebuild 2615 RMD160 14410e99bc328e9facf7a7220de8c3bc041b79d5 SHA1 94c41f436e1c54a81ed6d7e259088fbd3f5b4f29 SHA256 964d36a756c071535a9e131bd89cf1bdf0f3a4bd770126fee8b0e518532f1b07
-EBUILD bfgminer-2.4.1.ebuild 2615 RMD160 30784bdb6e62f6889a8a1de603b40c274b56fbae SHA1 25c96b7d786fc96d46deffdd03cbdf2db9ef7d8f SHA256 fd1a284029b8b65630f75342965f181dc6e5bfb9dc0459f12c397931dfb4f5a1
-EBUILD bfgminer-2.4.2.ebuild 2670 RMD160 08ad24b817b5c33fb8c5f6ac49a426b2ac088889 SHA1 d8c5523a56a3447c895ee64f6c0df527e46057ea SHA256 ad6b89a52de8ee460890f8c8fdc051a3d42757d617b83dea8a9d2110fb3e3a80
-MISC ChangeLog 1587 RMD160 52d08c19f32ad939648a008372f3fba0074e7b82 SHA1 0f7a75fd57223448e112e645991b826cb0216725 SHA256 b30b93d57b4c1d5fe16f7faa123f911ccf9cab6fc9140ba72fef049c1907e091
+EBUILD bfgminer-2.3.4.ebuild 2720 RMD160 481444bda3f75a5c9dd9be4f39326d95d3eff9ee SHA1 e935eca46e27203b9b0ee3efdda73ae62ac69274 SHA256 3f944baa995e25f2a9b5a2650dc848563b2853d3572406577fcf7464b66476f6
+EBUILD bfgminer-2.3.5.ebuild 2635 RMD160 8649501d4c89bbed14b022bc49905cb3427bdc13 SHA1 1f181a8e845934038234647983aa51a471a5ae45 SHA256 38d9db76ebb485bf523bd8c1c68cc7d31b23ece657c5d64206cf556a845d6df4
+EBUILD bfgminer-2.3.6.ebuild 2635 RMD160 47fe30dfec22fa90c39578feaa77e32dadc5fe76 SHA1 b04dfad9d6190f1445a7fde38b981738a57bab84 SHA256 381c852fcdec8fd92b8140952d283fc0c56822f3909e2b6bde24057fd5e761f1
+EBUILD bfgminer-2.4.0.ebuild 2635 RMD160 c44bfc942f3b152a972039f7186f43cb93acd638 SHA1 52c2cc93a5a9193cbd5b3cd82d1ad8ea25b6e092 SHA256 46dd08d5b5295765e7dec9e0c2a092a172f88fc11071c9488d4b4400bc096ef6
+EBUILD bfgminer-2.4.1.ebuild 2635 RMD160 0e21e2fda285d18069ca5430c6cee94c16575f7a SHA1 b1de459f10bd22deb6ab9f07e1d39580a6ad00d7 SHA256 ced1cf93afeaf68877514538d6b6c904c534d7f71300e3b5dd71cf3eed9be565
+EBUILD bfgminer-2.4.2.ebuild 2691 RMD160 17b5c7e328316fa918cb1ec390feb43ff5ef0a54 SHA1 43ac5b66f891973c66bbaff92a68ec1051693ea7 SHA256 fcd492244639b9fc2b1627b571aa352a0aae61551205421c1241aca7f663cb55
+MISC ChangeLog 1822 RMD160 46901b79a4726387ea00cd7841228b703ab8f2fa SHA1 3654e0ce4f83005b1772cf9e0f612090ea79217f SHA256 c4bf128d0bb8a4799e53b98ae950f51841e0cc49a994e8892a6a39470264f76e
 MISC metadata.xml 1098 RMD160 904e475c1965aa37f4397638ad43dbd6b7a1e444 SHA1 2b514f0d72d7c632709394f425b114fcca98e75b SHA256 6f3db428a82a08e50d3debb30909210c4682aba7b258233cc961708f17f6ca65
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREIAAYFAk/Lg5oACgkQl5yvQNBFVTXaxACgjK9TBYmXvxq4jZ5/C8kmeMew
-h/4AmwcBAik0Z05Ji2pYWGbIdAlVawa5
-=0LAh
+iEYEAREIAAYFAk/cS9AACgkQl5yvQNBFVTViPQCfZb0pgU9AV1uFqCgkebQ+We8b
+R/cAnjCKcmMPMbZssIJqPjmvMYqqjnOO
+=RUdg
 -----END PGP SIGNATURE-----
