@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/bfgminer
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/bfgminer/ChangeLog,v 1.9 2012/06/03 15:32:32 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/bfgminer/ChangeLog,v 1.10 2012/06/16 09:03:02 blueness Exp $
+
+  16 Jun 2012; Anthony G. Basile <blueness@gentoo.org> bfgminer-2.3.4.ebuild,
+  bfgminer-2.3.5.ebuild, bfgminer-2.3.6.ebuild, bfgminer-2.4.0.ebuild,
+  bfgminer-2.4.1.ebuild, bfgminer-2.4.2.ebuild:
+  Add needed ncurses dep for opencl
 
 *bfgminer-2.4.2 (03 Jun 2012)
 
